# documents-and-signatures-computer-ethics-and-legislation

./: .gitignore  Makefile  README.md  alembic.ini  database.sqlite  dev.py  pyproject.toml  requirements.txt  run.py  start.py
app/: app.py  containers.py  database.py  models.py  schemas.py
app/api/: __init__.py  api_v1.py
app/context/shared/domain/: __init__.py  dao.py
app/context/shared/infrastructure/persistence/sqlalchemy/: orm_dao.py
app/context/users/application/: __init__.py  user_creator.py
app/context/users/domain/: __init__.py  user.py  user_dto.py  user_errors.py  user_repository.py
app/context/users/domain/enums/: __init__.py  role.py
app/context/users/domain/objects/: __init__.py  user_email.py  user_full_name.py  user_id.py  user_password.py  user_role.py
app/context/users/infrastructure/: user_container.py
app/context/users/infrastructure/http/api_v1/: __init__.py  user_endpoint.py
app/context/users/infrastructure/http/api_v1/controllers/: __init__.py  user_create_post_controller.py  user_dto.py
app/context/users/infrastructure/persistence/sqlalchemy/: __init__.py  orm_user_dao.py  orm_user_entity.py  orm_user_repository.py
app/core/: settings.py  transformations.py
app/database/: base.py  mapped.py  mixins.py  utils.py
app/routes/: __init__.py  consent.py  contract.py  signature.py
app/utils/: audit.py
migrations/: env.py  script.py.mako
migrations/versions/: 13cefb92191b_create_users_table.py  1ace91b94575_create_uuid_extension.py  fa8d25f4b544_autogenerate_the_databases_and_its_.py
