[tool.poetry]
name = "documents-and-signature"
version = "0.1.0"
description = ""
authors = ["Sergio Majé <smajefranco@gmail.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}
sqlalchemy = {extras = ["asyncio", "mypy", "asyncpg"], version = "^2.0.41"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
reportlab = "^4.4.1"
dependency-injector = "^4.48.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
isort = "^6.0.1"
flake8 = "^7.2.0"
black = "^25.1.0"
ruff = "^0.12.0"
alembic = "^1.16.2"
psycopg2 = "^2.9.10"

[tool.isort]
line-length = 90

[tool.black]
line-length = 90
target-version = ['py312']
skip-string-normalization = true

[tool.ruff]
line-length = 90
indent-width = 2
target-version = 'py312'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'Q', 'I', 'C90', 'D', 'B', 'PL', 'SIM']
ignore = ['D100', 'D104', 'D300']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.flake8-quotes]
docstring-quotes = 'single'
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.ruff.isort]
lines-after-imports = 2
known-local-folder = ['app']

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.pydocstyle]
convention = 'google'

[tool.ruff.pycodestyle]
max-doc-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
