[project]
name = "documents-and-signature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.1",
    "fastapi[all]>=0.115.13",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "reportlab>=4.4.2",
    "sqlalchemy[mypy]>=2.0.41",
]

[dependency-groups]
lint = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]
migration = [
    "alembic>=1.16.2",
    "psycopg2>=2.9.10",
]
