[project]
name = "documents-and-signature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.1",
    "fastapi[all]>=0.115.13",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "reportlab>=4.4.2",
    "sqlalchemy[mypy]>=2.0.41",
]

[dependency-groups]
lint = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]
migration = [
    "alembic>=1.16.2",
    "psycopg2>=2.9.10",
]

[tool.isort]
line-length = 90

[tool.black]
line-length = 90
target-version = ['py312']
skip-string-normalization = true

[tool.ruff]
line-length = 90
indent-width = 2
target-version = 'py312'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'Q', 'I', 'C90', 'D', 'B', 'PL', 'SIM']
ignore = ['D100', 'D104', 'D300']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.flake8-quotes]
docstring-quotes = 'single'
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.ruff.isort]
lines-after-imports = 2
known-local-folder = ['app']

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.pydocstyle]
convention = 'google'

[tool.ruff.pycodestyle]
max-doc-length = 88
